spade-tests/src/snapshots/spade_tests__ast_lowering__negative_pipeline_inst_is_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
assertion_line: 887
---
pipeline(0) y(clk: clock) -> bool {
    true
}
pipeline(0) x(clk: clock) -> bool {
    inst(-1) y(clk)
}

error: Negative depth
  ┌─ testinput:5:10
  │
5 │     inst(-1) y(clk)
  │          ^^ Expected non-negative depth


